--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,7 +10,7 @@ on:
         default: .
 
 jobs:
-  build:
+  unit-test:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
@@ -30,7 +30,7 @@ jobs:
 
     - name: Test with coverage
       working-directory: ${{ inputs.working-directory }}
-      run: go test -race -coverprofile=coverage.txt -covermode=atomic ./...
+      run: go test $(go list ./... | grep -v /integration) -race -coverprofile=coverage.txt -covermode=atomic
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
