--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -18,17 +18,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: pnpm/action-setup@v2
+      - uses: actions/setup-node@v3
         with:
-          version: 7
-          run_install: |
-            - recursive: true
-              args: [--frozen-lockfile, --strict-peer-dependencies]
-            - args: [--global, prettier, typescript]
+          node-version: 18
 
       - name: Install dependencies
-        run: pnpm install
+        run: npm ci
 
       - name: Run prettier
         run: |
-          pnpx prettier --config .prettierrc 'src/**/*.{ts,tsx}' --check
+          npx prettier --config .prettierrc 'src/**/*.{ts,tsx}' --check
