--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -12,4 +12,4 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Check spelling
-        uses: crate-ci/typos@v1
+        uses: crate-ci/typos@master
