--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -21,5 +21,7 @@ jobs:
           VALIDATE_GO: false
           VALIDATE_JSCPD: false
           VALIDATE_DOCKERFILE_HADOLINT: false
+          VALIDATE_RUST_2015: false
+          VALIDATE_RUST_2018: false
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
