--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Run prettier
         run: |
           if [ -f ".prettierrc" ]; then
-            npx prettier --config .prettierrc 'src/**/*.{ts,tsx}' --check
+            npx prettier --config .prettierrc 'src/**/*.{ts,tsx,js,vue,html}' --check
           else
-            npx prettier 'src/**/*.{ts,tsx}' --check
+            npx prettier 'src/**/*.{ts,tsx,js,vue,html}' --check
           fi
