--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,7 +20,7 @@ jobs:
     outputs:
       go-version: ${{ steps.go-version.outputs.go-version }}
     steps:
-      - id: go-versions
+      - id: go-version
         run: |
           if [ "${{ github.event.inputs.latest }}" == "1" ]; then
             echo "go-version=[\"1.21\"]" >> $GITHUB_OUTPUT
