--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
       - id: go-version
         run: |
-          if [ "${{ github.event.inputs.latest }}" == "1" ]; then
+          if [ "${{ inputs.latest }}" == "1" ]; then
             echo "go-version=[\"1.21\"]" >> $GITHUB_OUTPUT
           else
             echo "go-version=[\"1.20\", \"1.21\"]" >> $GITHUB_OUTPUT
