--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,7 +20,8 @@ jobs:
     outputs:
       go-version: ${{ steps.go-version.outputs.go-version }}
     steps:
-      - id: go-version
+      - name: Determine Go versions
+        id: go-version
         run: |
           if [ "${{ inputs.latest }}" == "1" ]; then
             echo "go-version=[\"1.21\"]" >> $GITHUB_OUTPUT
