--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,9 +24,9 @@ jobs:
         id: go-version
         run: |
           if [ "${{ inputs.latest }}" == "1" ]; then
-            echo "go-version=[\"1.21\"]" >> $GITHUB_OUTPUT
+            echo "go-version=[\"1.21\"]" >> "$GITHUB_OUTPUT"
           else
-            echo "go-version=[\"1.20\", \"1.21\"]" >> $GITHUB_OUTPUT
+            echo "go-version=[\"1.20\", \"1.21\"]" >> "$GITHUB_OUTPUT"
           fi
 
   unit-test:
