--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,9 +24,9 @@ jobs:
         id: go-version
         run: |
           if [ "${{ inputs.latest }}" == "1" ]; then
-            echo "go-version=[\"1.21\"]" >> $GITHUB_OUTPUT
+            echo "go-version=[\"1.21\"]" >> "$GITHUB_OUTPUT"
           else
-            echo "go-version=[\"1.20\", \"1.21\"]" >> $GITHUB_OUTPUT
+            echo "go-version=[\"1.20\", \"1.21\"]" >> "$GITHUB_OUTPUT"
           fi
 
   unit-test:
@@ -43,6 +43,7 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.go-version }}
+          cache: false
 
       - name: Build
         working-directory: ${{ inputs.working-directory }}
@@ -50,7 +51,9 @@ jobs:
 
       - name: Test with coverage
         working-directory: ${{ inputs.working-directory }}
-        run: go test $(go list ./... | grep -v /integration) -race -coverprofile=coverage.txt -covermode=atomic
+        run: |
+          readarray -t packages < <(go list ./... | grep -v /integration)
+          go test "${packages[@]}" -race -coverprofile=coverage.txt -covermode=atomic
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
