--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/setup-go@v4
         with:
           go-version: "1.21"
-          cache: false
+          check-latest: true
 
       - uses: actions/checkout@v4
 
