--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -21,7 +21,8 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: lts
+          check-latest: true
 
       - name: Install dependencies
         run: npm ci
