--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -21,7 +21,7 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: lts
+          node-version: 20
           check-latest: true
 
       - name: Install dependencies
