--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -23,7 +23,8 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
+          check-latest: true
 
       - name: Install dependencies
         run: npm ci
