Set Go cache-dependency-path

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -45,6 +45,7 @@ jobs:
         with:
           go-version: ${{ matrix.go-version }}
           check-latest: true
+          cache-dependency-path: ${{ inputs.working-directory }}/go.sum
 
       - name: Build
         working-directory: ${{ inputs.working-directory }}
