--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -26,6 +26,7 @@ jobs:
         with:
           go-version: "1.21"
           check-latest: true
+          cache-dependency-path: ${{ inputs.working-directory }}/go.sum
 
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v3
