Format renovate config

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,4 +1,10 @@
 {
-  "extends": ["config:base", ":disableDependencyDashboard", ":automergeMinor"],
-  "labels": ["dependencies"]
+  "extends": [
+    "config:base",
+    ":disableDependencyDashboard",
+    ":automergeMinor"
+  ],
+  "labels": [
+    "dependencies"
+  ]
 }
