Set release drafter job name

--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -8,6 +8,7 @@ permissions:
 
 jobs:
   update_release_draft:
+    name: Update Release Drafter
     permissions:
       contents: write
       pull-requests: write
