--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -7,7 +7,8 @@ permissions:
   contents: read
 
 jobs:
-  update_release_draft:
+  update:
+    name: Update
     permissions:
       contents: write
       pull-requests: write
