--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -3,6 +3,7 @@
     "config:recommended",
     "docker:pinDigests",
     "helpers:pinGitHubActionDigests",
+    ":pinDependencies",
     ":disableDependencyDashboard",
     ":automergeMinor"
   ],
