Pin github action workflows with digest (#24)

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,6 +1,9 @@
 {
   "extends": [
     "config:recommended",
+    "docker:pinDigests",
+    "helpers:pinGitHubActionDigests",
+    ":pinDependencies",
     ":disableDependencyDashboard",
     ":automergeMinor"
   ],
