Use renovate best practices preset

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,8 +1,6 @@
 {
   "extends": [
-    "config:recommended",
-    "docker:pinDigests",
-    "helpers:pinGitHubActionDigests",
+    "config:best-practices",
     ":pinDependencies",
     ":disableDependencyDashboard",
     ":automergeMinor"
