--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,6 +14,9 @@ on:
         type: number
         default: 2
 
+permissions:
+  contents: read
+
 jobs:
   set-matrix:
     runs-on: ubuntu-latest
