--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -12,4 +12,4 @@ jobs:
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
 
       - name: Check spelling
-        uses: crate-ci/typos@master
+        uses: crate-ci/typos@v1.18.2
