--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -32,3 +32,4 @@ jobs:
           VALIDATE_TYPESCRIPT_STANDARD: false # related https://github.com/super-linter/super-linter/issues/4445
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          FILTER_REGEX_INCLUDE: ".*go.mod"
