--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,11 @@ on:
         description: "The tag name of the release"
         required: false
         default: ${{ github.ref_name }}
+      harden-runner:
+        description: "Harden runner"
+        required: false
+        type: boolean
+        default: true
 
 permissions:
   contents: read
@@ -20,6 +25,11 @@ jobs:
     permissions:
       contents: write
     steps:
+      - uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142 # v2.7.0
+        if: ${{ inputs.harden-runner }}
+        with:
+          egress-policy: audit
+
       - name: Checkout
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
 
