--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -2,6 +2,12 @@ name: Check Spelling
 
 on:
   workflow_call:
+    inputs:
+      harden-runner:
+        description: "Harden runner"
+        required: false
+        type: boolean
+        default: true
 
 permissions:
   contents: read
@@ -11,6 +17,11 @@ jobs:
     name: Spell Check
     runs-on: ubuntu-latest
     steps:
+      - uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142 # v2.7.0
+        if: ${{ inputs.harden-runner }}
+        with:
+          egress-policy: audit
+
       - name: Checkout
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
 
