Run spell check

--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -1,6 +1,8 @@
 name: Check Spelling
 
 on:
+  push:
+  pull_request:
   workflow_call:
     inputs:
       harden-runner:
@@ -19,7 +21,7 @@ jobs:
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142 # v2.7.0
-        if: ${{ inputs.harden-runner }}
+        if: ${{ inputs.harden-runner || github.event_name != 'workflow_call' }}
         with:
           disable-sudo: true
           egress-policy: block
