--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -13,6 +13,11 @@ on:
         required: false
         type: boolean
         default: true
+      cache:
+        description: "Cache Go modules"
+        required: false
+        type: boolean
+        default: false
 
 permissions:
   contents: read
@@ -42,6 +47,7 @@ jobs:
         with:
           go-version: "1.22"
           check-latest: true
+          cache: ${{ inputs.cache }}
           cache-dependency-path: ${{ inputs.working-directory }}/go.sum
 
       - name: Run golangci-lint
