--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -47,8 +47,7 @@ jobs:
         with:
           go-version: "1.22"
           check-latest: true
-          cache: ${{ inputs.cache }}
-          cache-dependency-path: ${{ inputs.working-directory }}/go.sum
+          cache: false
 
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@3cfe3a4abbb849e10058ce4af15d205b6da42804 # v4.0.0
@@ -56,3 +55,4 @@ jobs:
           version: latest
           args: --timeout 5m
           working-directory: ${{ inputs.working-directory }}
+          skip-cahce: ${{ !inputs.cache }}
