--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -55,4 +55,4 @@ jobs:
           version: latest
           args: --timeout 5m
           working-directory: ${{ inputs.working-directory }}
-          skip-cahce: ${{ !inputs.cache }}
+          skip-cache: ${{ !inputs.cache }}
