--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -39,6 +39,7 @@ jobs:
             objects.githubusercontent.com:443
             raw.githubusercontent.com:443
             proxy.golang.org:443
+            storage.googleapis.com:443
 
       - name: Checkout
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
