Reuse renovate preset

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,14 +1,5 @@
 {
   "extends": [
-    "config:best-practices",
-    ":pinDependencies",
-    ":disableDependencyDashboard",
-    ":automergeMinor"
-  ],
-  "labels": [
-    "dependencies"
-  ],
-  "digest": {
-    "automerge": true
-  }
+    "github>harryzcy/renovate-config"
+  ]
 }
