--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,7 +24,7 @@ permissions:
 
 jobs:
   set-matrix:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     outputs:
       go-version: ${{ steps.go-version.outputs.go-version }}
     steps:
@@ -41,7 +41,7 @@ jobs:
     needs: set-matrix
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-14]
+        os: [ubuntu-22.04, macos-14]
         go-version: ${{ fromJSON(needs.set-matrix.outputs.go-version) }}
     runs-on: ${{ matrix.os }}
     steps:
