Enable OIDC for codecov

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -75,3 +75,4 @@ jobs:
         with:
           working-directory: ${{ inputs.working-directory }}
           file: ./coverage.txt
+          use_oidc: true
