Set id-token permission for OIDC

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -44,6 +44,8 @@ jobs:
         os: [ubuntu-22.04, macos-14]
         go-version: ${{ fromJSON(needs.set-matrix.outputs.go-version) }}
     runs-on: ${{ matrix.os }}
+    permissions:
+      id-token: write
     steps:
       - uses: step-security/harden-runner@17d0e2bd7d51742c71671bd19fa12bdc9d40a3d6 # v2.8.1
         if: ${{ inputs.harden-runner }}
