--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -76,5 +76,5 @@ jobs:
         uses: codecov/codecov-action@13ce06bfc6bbe3ecf90edbbf1bc32fe5978ca1d3 # v5.3.1
         with:
           working-directory: ${{ inputs.working-directory }}
-          file: ./coverage.txt
+          files: ./coverage.txt
           use_oidc: true
