--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -20,10 +20,51 @@ permissions:
   contents: read
 
 jobs:
+  determine:
+    name: Determine changed files
+    runs-on: ubuntu-24.04
+    outputs:
+      use_slim: ${{ steps.changed-files-yaml.outputs.any_changed == 'true' }}
+    steps:
+      - uses: step-security/harden-runner@4d991eb9b905ef189e4c376166672c3f2f230481 # v2.11.0
+        if: ${{ github.event_name != 'workflow_call' || inputs.harden-runner }}
+        with:
+          disable-sudo: true
+          egress-policy: audit
+
+      - name: Checkout Code
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
+      - name: Determine changed files
+        id: determine
+        uses: tj-actions/changed-files@v45.0.7
+        with:
+          files_yaml: |
+            rust:
+              - "**.rs"
+              - "Cargo.toml"
+              - "Cargo.lock"
+            dotnet:
+              - "**.cs"
+              - "**.csproj"
+              - "**.sln"
+
   linter:
     name: Lint Code Base
     runs-on: ubuntu-24.04
-
+    needs: determine
+    env:
+      VALIDATE_ALL_CODEBASE: ${{ inputs.check-all }}
+      VALIDATE_GO: false
+      VALIDATE_JSCPD: false
+      VALIDATE_DOCKERFILE_HADOLINT: false
+      VALIDATE_RUST_2015: false
+      VALIDATE_RUST_2018: false
+      VALIDATE_RUST_CLIPPY: false
+      VALIDATE_TYPESCRIPT_STANDARD: false # related https://github.com/super-linter/super-linter/issues/4445
+      DEFAULT_BRANCH: main
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      FILTER_REGEX_INCLUDE: ".*go.mod"
     steps:
       - uses: step-security/harden-runner@4d991eb9b905ef189e4c376166672c3f2f230481 # v2.11.0
         if: ${{ github.event_name != 'workflow_call' || inputs.harden-runner }}
@@ -36,17 +77,10 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Lint Code Base
+      - name: Lint codebase - full
+        if: ${{ needs.determine.outputs.use_slim == 'false' || env.VALIDATE_ALL_CODEBASE }}
         uses: super-linter/super-linter@4e8a7c2bf106c4c766c816b35ec612638dc9b6b2 # v7.3.0
-        env:
-          VALIDATE_ALL_CODEBASE: ${{ inputs.check-all }}
-          VALIDATE_GO: false
-          VALIDATE_JSCPD: false
-          VALIDATE_DOCKERFILE_HADOLINT: false
-          VALIDATE_RUST_2015: false
-          VALIDATE_RUST_2018: false
-          VALIDATE_RUST_CLIPPY: false
-          VALIDATE_TYPESCRIPT_STANDARD: false # related https://github.com/super-linter/super-linter/issues/4445
-          DEFAULT_BRANCH: main
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          FILTER_REGEX_INCLUDE: ".*go.mod"
+
+      - name: Lint codebase - slim
+        if: ${{ needs.determine.outputs.use_slim == 'true' && !env.VALIDATE_ALL_CODEBASE }}
+        uses: super-linter/super-linter/slim@v7.3.0
