--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Print info
         run: |
-          echo "use_slim: ${{ steps.determine.outputs.any_changed }}"
+          echo "use_slim: ${{ !steps.determine.outputs.any_changed }}"
 
   linter:
     name: Lint Code Base
