--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -24,7 +24,7 @@ jobs:
     name: Determine changed files
     runs-on: ubuntu-24.04
     outputs:
-      use_slim: ${{ steps.determine.outputs.any_changed == 'true' }}
+      use_full: ${{ steps.determine.outputs.any_changed == 'true' }}
     steps:
       - uses: step-security/harden-runner@4d991eb9b905ef189e4c376166672c3f2f230481 # v2.11.0
         if: ${{ github.event_name != 'workflow_call' || inputs.harden-runner }}
@@ -51,12 +51,12 @@ jobs:
 
       - name: Print info
         run: |
-          echo "use_slim: ${{ !steps.determine.outputs.any_changed }}"
+          echo "use_full: ${{ steps.determine.outputs.any_changed }}"
 
   linter:
     name: Lint Code Base
     runs-on: ubuntu-24.04
-    if: ${{ needs.determine.outputs.use_slim == 'false' || inputs.check-all }}
+    if: ${{ needs.determine.outputs.use_full == 'true' || inputs.check-all }}
     needs: determine
     steps:
       - uses: step-security/harden-runner@4d991eb9b905ef189e4c376166672c3f2f230481 # v2.11.0
@@ -88,7 +88,7 @@ jobs:
   linter-slim:
     name: Lint Code Base
     runs-on: ubuntu-24.04
-    if: ${{ needs.determine.outputs.use_slim == 'true' && !inputs.check-all }}
+    if: ${{ needs.determine.outputs.use_full == 'false' && !inputs.check-all }}
     needs: determine
     steps:
       - uses: step-security/harden-runner@4d991eb9b905ef189e4c376166672c3f2f230481 # v2.11.0
