Configure renovate to match node-version

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,5 +1,19 @@
 {
   "extends": [
     "github>harryzcy/renovate-config"
+  ],
+  "customManagers": [
+    {
+      "customType": "regex",
+      "fileMatch": [
+        ".github/workflows/.*\\.yml",
+        ".github/workflows/.*\\.yaml"
+      ],
+      "matchStrings": [
+        "node-version: ['\"]?(?<currentValue>.*)['\"]?"
+      ],
+      "depNameTemplate": "node",
+      "datasourceTemplate": "node-version"
+    }
   ]
 }
