Keep only major version for node versioning template

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -13,7 +13,8 @@
       ],
       "depNameTemplate": "node",
       "datasourceTemplate": "docker",
-      "versioningTemplate": "docker"
+      "versioningTemplate": "regex:^(?<major>\\d+)$",
+      "automerge": false
     }
   ]
 }
