--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,6 +2,14 @@
   "extends": [
     "github>harryzcy/renovate-config"
   ],
+  "packageRules": [
+    {
+      "matchManagers": [
+        "custom.regex"
+      ],
+      "automerge": false
+    }
+  ],
   "customManagers": [
     {
       "customType": "regex",
@@ -13,7 +21,7 @@
       ],
       "depNameTemplate": "node",
       "datasourceTemplate": "docker",
-      "versioningTemplate": "docker"
+      "versioningTemplate": "regex:^(?<major>\\d+)$"
     }
   ]
 }
