Use `extractVersionTemplate` to get major version

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -21,7 +21,8 @@
       ],
       "depNameTemplate": "node",
       "datasourceTemplate": "docker",
-      "versioningTemplate": "regex:^(?<major>\\d+)$"
+      "versioningTemplate": "docker",
+      "extractVersionTemplate": "regex:^(?<major>\\d+)$"
     }
   ]
 }
