Set versioningTemplate also to regex

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -21,7 +21,7 @@
       ],
       "depNameTemplate": "node",
       "datasourceTemplate": "docker",
-      "versioningTemplate": "docker",
+      "versioningTemplate": "regex:^(?<major>\\d+)$",
       "extractVersionTemplate": "regex:^(?<major>\\d+)$"
     }
   ]
