--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -28,6 +28,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
+      - name: Setup Node
+        uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
+        with:
+          node-version: 24
+          check-latest: true
+
       - name: Check Renovate Config Syntax
         run: |
           npx --yes --package renovate@latest -- renovate-config-validator --strict
