--- a/biome.json
+++ b/biome.json
@@ -2,5 +2,10 @@
   "$schema": "https://biomejs.dev/schemas/2.2.2/schema.json",
   "formatter": {
     "indentStyle": "space"
+  },
+  "json": {
+    "formatter": {
+      "lineWidth": 40
+    }
   }
 }
