--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -101,6 +101,7 @@ jobs:
         uses: super-linter/super-linter@7bba2eeb89d01dc9bfd93c497477a57e72c83240 # v8.2.0
         env:
           VALIDATE_ALL_CODEBASE: ${{ inputs.check-all }}
+          VALIDATE_BIOME_FORMAT: false
           VALIDATE_GO: false
           VALIDATE_JSCPD: false
           VALIDATE_DOCKERFILE_HADOLINT: false
