--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -53,6 +53,7 @@ jobs:
           - ubuntu-24.04-arm
           - macos-14
           - macos-15
+          - macos-26
         go-version: ${{ fromJSON(needs.set-matrix.outputs.go-version) }}
     runs-on: ${{ matrix.os }}
     permissions:
